syntax = "proto3";
option csharp_namespace = "nadena.dev.ndmf.proto";

package nadena.dev.ndmf.proto;

import "proto/base_types.proto";

enum ColliderType {
  SPHERE = 0;
  // Capsule along the Y axis
  CAPSULE = 1;
  PLANE = 2;
}

message DynamicCollider {
  ObjectID target_transform = 1;
  ColliderType type = 2;
  float radius = 3;
  float height = 4;
  Vector position_offset = 5;
  Quaternion rotation_offset = 6;
}

message DynamicBone {
  ObjectID root_transform = 1;
  string template_name = 2;
  float base_radius = 3;
  repeated ObjectID ignore_transforms = 4;
  bool is_grabbable = 5;
  //.bool ignore_self = 6;
  repeated ObjectID colliders = 7;
}